--- a/ingestor/Dockerfile
+++ b/ingestor/Dockerfile
@@ -7,5 +7,6 @@ ENV BROKEN_LINES_TO_FAIL=64
 ENV BATCH_SIZE=32
 ENV UPSERTER_HOST=upserter
 ENV UPSERTER_PORT=8080
+ENV FINAL_SLEEP=100ms
 
 CMD [ "/ingestor" ]
