--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,20 @@
 version: "3"
 services:
   verifier:
-    image: postgres:9.6.12
+    image: go_build
     container_name: verifier
     restart: "no"
-    environment:
-      - POSTGRES_PASSWORD=bazinga
-      - POSTGRES_USER=upserter
-      - POSTGRES_DB=upserter
     volumes:
-      - ./verifier:/verifier
-    command: /verifier/verifier.sh
+      - ./:/tsv_load/
+      - ./go_pkg_mod/:/go/pkg/mod/
+    # WATCH OUT: go test . and multitude OTHER ways of running go test tool will produce MISLEADING RESULTS
+    #   especially if you need some last-second post-SigTerm logs (which docker just drops to floor)
+    #   test logs are buffered till test completes (and it completes after SigTerm) so THERE ARE NO LOGS
+    # see this for CONTROVERSY:
+    #   https://github.com/golang/go/issues/23213#issuecomment-382188419
+    # do tweak the command only after contemplating this (at the very least):
+    #   https://github.com/golang/go/commit/64a73b0355ade719894894a4d192fbd6207e4387#diff-01af78bb2b572ff7f22e137d7651ebd8R232
+    command: /bin/sh -c 'cd /tsv_load/verifier && go test -v'
   postgres:
     image: postgres:9.6.12
     container_name: postgres
